--- a/vue_router/单页面多路由.md
+++ b/vue_router/单页面多路由.md
@@ -1,1 +1,49 @@
 **单页面多路由**
+
+```vue
+<template>
+  <div id="app">
+    <img src="./assets/logo.png">
+    <router-link to="/hi">hi</router-link>
+    <router-link :to="{name:'name',params:{username:'x0candy'}}">name</router-link>
+    <router-view />
+    <router-view name="left"></router-view>        <!--多个路由区-->
+    <router-view name="right"></router-view>
+  </div>
+</template>
+
+<script>
+export default {
+  name: 'App'
+}
+</script>
+
+<style>
+#app {
+  font-family: "Avenir", Helvetica, Arial, sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  text-align: center;
+  color: #2c3e50;
+  margin-top: 60px;
+}
+</style>
+
+<script>
+//index.js,只写了一部分
+  {
+    path: '/hi',
+    components: {                     //关键之处
+      default: x0candy,
+      left: left,
+      right: right
+    },
+    children: [{
+      path: 'name',
+      name: 'name',
+      component: name
+    }]
+  }
+</script>
+```
+
